--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </section>
     <!-- card ends here -->
     <!-- section 4 start -->
-     <section class="container-xxl mt-5 pt-5">
+    <section class="container-xxl mt-5 pt-5">
       <div class="row p-5">
         <div class="col-12 col-md-6 col-lg-6">
           <h1>Popular Post</h1>
@@ -251,7 +251,7 @@
           </button>
         </div>
       </div>
-       <div class="row p-3">
+      <div class="row p-3">
         <!-- card-1 -->
         <div class="col-12 col-md-4 col-lg-4">
           <div class="card border border-0" style="width: 350px">
@@ -263,11 +263,11 @@
             <div class="card-body p-0 py-4">
               <p class="fw-bold">Travel</p>
               <span class="fs-6 text-secondary">13 March 2023</span>
-              <h5 class="card-title">
-                Train Or Bus Journey?Which one suits?
-              </h5>
+              <h5 class="card-title">Train Or Bus Journey?Which one suits?</h5>
               <p class="card-text">
-                The choice between a train or bus journey depends on various factors such as the distance of the journey, the time available, the cost, and person 
+                The choice between a train or bus journey depends on various
+                factors such as the distance of the journey, the time available,
+                the cost, and person
               </p>
               <a class="link-offset-2 textpurple" href="#">Read More...</a>
             </div>
@@ -285,10 +285,12 @@
               <p class="fw-bold">Development</p>
               <span class="fs-6 text-secondary">13 March 2023</span>
               <h5 class="card-title">
-                Best Website to research for your  next project
+                Best Website to research for your next project
               </h5>
               <p>
-               Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment. survival strategies to ensure proactive 
+                Organically grow the holistic world view of disruptive
+                innovation via workplace diversity and empowerment. survival
+                strategies to ensure proactive
               </p>
               <a class="link-offset-2 textpurple" href="#">Read More...</a>
             </div>
@@ -318,7 +320,7 @@
           </div>
         </div>
       </div>
-       <div class="row  p-3">
+      <div class="row p-3">
         <!-- card-1 -->
         <div class="col-12 col-md-4 col-lg-4">
           <div class="card border border-0" style="width: 350px">
@@ -334,7 +336,8 @@
                 Who is the best singer on chart?Know him?
               </h5>
               <p class="card-text">
-             chart by Billboard which ranks the all-time greatest artists based on their performance on the weekly Billboard Hot 100 and  
+                chart by Billboard which ranks the all-time greatest artists
+                based on their performance on the weekly Billboard Hot 100 and
               </p>
               <a class="link-offset-2 textpurple" href="#">Read More...</a>
             </div>
@@ -355,7 +358,9 @@
                 How to start export import business from home?
               </h5>
               <p>
-               Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs 
+                Capitalize on low hanging fruit to identify a ballpark value
+                added activity to beta test. Override the digital divide with
+                additional clickthroughs
               </p>
               <a class="link-offset-2 textpurple" href="#">Read More...</a>
             </div>
@@ -376,18 +381,39 @@
                 Make some drinks with chocolates chocolates and milk
               </h5>
               <p>
-                Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment. survival strategies to ensure proactive
+                Organically grow the holistic world view of disruptive
+                innovation via workplace diversity and empowerment. survival
+                strategies to ensure proactive
               </p>
               <a class="link-offset-2 textpurple" href="#">Read More...</a>
             </div>
           </div>
         </div>
       </div>
-      </section>
+    </section>
     <!-- section 4 end -->
-     <!-- section 5 start -->
-      
-      <!-- section 5 end -->
+      <!-- section 5 start -->
+    <section class="container-xxl bgpurple pt-5">
+      <div
+        class="row text-white d-flex align-items-center p-5 text-center mx-auto"
+      >
+        <div class="col-12 py-3 p-3">
+          <h2 class="fw-bold">
+            Get our stories delivered From <br />
+            us to your inbox weekly.
+          </h2>
+          <button type="button" class="btn btnoutline px-5 py-2 bg-white mt-4">
+            Read More
+          </button>
+          <p class="text-body-tertiary fs-6">
+            Get a response tomorrow if you submit by 9pm today. If we received
+            after <br />
+            9pm will get a reponse the following day.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- section 5 end -->
 
     <!-- bootstrap js -->
     <script
