--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
         </ul>
-        <div class="form gap-3 d-flex align-items-center ms-4">
+        <div class="form  gap-3 d-flex align-items-center ms-4">
           <i class="fa-solid fa-magnifying-glass"></i>
           <button type="button" class="btn bgpurple text-white px-4">
             Contact Us
@@ -49,7 +49,7 @@
 
   <!-- hero start -->
 
-  <section class="container-xxl mt-5 bgpurple">
+  <section class="container-xxl my-5 pt-4 bgpurple">
     <div class="row d-flex align-items-center">
       <div class="col-12 col-md-6 col-lg-6 py-5 px-5">
         <p class="text-white">Featured Post</p>
@@ -72,8 +72,8 @@
   <!-- section 1 start -->
   <section class="container-xxl bgimage my-5 pt-5 position-relative">
     <div class="row">
-      <div class="col-12 bg-white rounded-4 py-3 position-absolute end-0 bottom-0 p-3"
-        style="width: 800px; height: 350px">
+      <div class="col-12 position-div bg-white shadow-lg rounded-4 py-3 position-absolute end-0 p-3"
+        style="width: 800px; height: 350px; bottom: -50px;">
         <p class="fw-bold">DEVELOPMENT</p>
         <span class="lead">16 March 2023</span>
         <h3>
@@ -100,7 +100,7 @@
         <h1>Our Recent Post</h1>
       </div>
       <div class="col-12 col-md-6 col-lg-6">
-        <button type="button" class="btn bgpurple text-white px-5 py-2 float-end">
+        <button type="button" class="btn bgpurple text-white px-5 py-2 float-none float-lg-end">
           View All
         </button>
       </div>
@@ -198,7 +198,7 @@
         <h1>Popular Post</h1>
       </div>
       <div class="col-12 col-md-6 col-lg-6">
-        <button type="button" class="btn bgpurple text-white px-5 py-2 float-end">
+        <button type="button" class="btn bgpurple text-white px-5 py-2 float-none float-lg-end">
           View All
         </button>
       </div>
@@ -351,10 +351,10 @@
       <div class="col-12 d-flex flex-column justify-content-center align-items-center p-5">
         <img src="./assets/logo.png" alt="logo" class="img-fluid mb-4" />
         <ul class="d-flex gap-5 p-0 m-0">
-          <li>Home</li>
-          <li>Blog</li>
-          <li>About</li>
-          <li>Contact Us</li>
+          <li class="foot-links ">Home</li>
+          <li class="foot-links ">Blog</li>
+          <li class="foot-links ">About</li>
+          <li class="foot-links ">Contact Us</li>
         </ul>
         <div class="d-flex gap-3 mt-3">
           <button type="button" class="btn bgpurple mt-4 text-white circle">
@@ -383,11 +383,11 @@
 
   <!-- bootstrap js -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
-    integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
-    crossorigin="anonymous"></script>
+    integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
