--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="row">
       <!-- card-1 -->
       <div class="col-12 col-md-4 col-lg-4">
-        <div class="card border border-0" style="width: 350px">
+        <div class="card cards border border-0" style="width: 350px">
           <img src="./assets/Card1.png" class="card-img-top img-fluid" alt="card-image" />
           <div class="card-body p-0 py-4">
             <p class="fw-bold">Travel</p>
@@ -152,7 +152,7 @@
       </div>
       <!-- card 2 -->
       <div class="col-12 col-md-4 col-lg-4">
-        <div class="card border border-0" style="width: 350px">
+        <div class="card cards border border-0" style="width: 350px">
           <img src="./assets/Card2.png" class="card-img-top img-fluid" alt="card-image" />
           <div class="card-body p-0 py-4">
             <p class="fw-bold">Development</p>
@@ -171,7 +171,7 @@
       </div>
       <!-- card 3 -->
       <div class="col-12 col-md-4 col-lg-4">
-        <div class="card border border-0" style="width: 350px">
+        <div class="card cards border border-0" style="width: 350px">
           <img src="./assets/Card3.png" class="card-img-top img-fluid" alt="card-image" />
           <div class="card-body p-0 py-4">
             <p class="fw-bold">Sports</p>
